# imperative-edsl

./: .gitignore  .travis.yml  LICENSE  README.md  cabal.project  imperative-edsl.cabal
csrc/: chan.c
examples/: C.hs  Concurrent.hs  Demo.hs  Exp.hs  FMap.hs  Imperative.hs  Ref.hs
include/: chan.h
src/Control/: Chan.hs  Monads.hs
src/Control/Monad/Operational/: Compositional.hs
src/Data/: ALaCarte.hs  TypePredicates.hs
src/Language/C/: Monad.hs
src/Language/Embedded/: CExp.hs  Concurrent.hs  Expr.hs  Expression.hs  Imperative.hs  Interpretation.hs  Signature.hs  Traversal.hs
src/Language/Embedded/Backend/: C.hs
src/Language/Embedded/Backend/C/: Expression.hs
src/Language/Embedded/Concurrent/: CMD.hs
src/Language/Embedded/Concurrent/Backend/: C.hs
src/Language/Embedded/Imperative/: Args.hs  CMD.hs  Frontend.hs  Types.hs
src/Language/Embedded/Imperative/Backend/: C.hs
src/Language/Embedded/Imperative/Frontend/: General.hs
src/System/IO/: Fake.hs
tests/: CExp.hs  Examples.hs  Imperative.hs  Semantics.hs  Tests.hs
